issue #31: Uncertainty bands on projections
Closes #31.
